@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("application")
 }
 
 group = "org.example"
@@ -25,12 +26,10 @@ dependencies {
     implementation("org.hibernate.orm:hibernate-community-dialects:6.4.4.Final")
 
 
-    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0") // JPA API
-    implementation("org.hibernate.orm:hibernate-core:6.3.1.Final") // Hibernate as JPA provider
-    implementation("org.projectlombok:lombok:1.18.30") // Corrected Lombok dependency
-    annotationProcessor("org.projectlombok:lombok:1.18.30") // Required for processing annotations
-//    runtimeOnly("org.postgresql:postgresql:42.6.0") // Example: PostgreSQL driver
-
+    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
+    implementation("org.hibernate.orm:hibernate-core:6.3.1.Final")
+    implementation("org.projectlombok:lombok:1.18.30")
+    annotationProcessor("org.projectlombok:lombok:1.18.30")
     // Add JOML dependency
     implementation("org.joml:joml:1.10.5")
 
@@ -41,6 +40,18 @@ dependencies {
 
     // add apache commons
     implementation("org.apache.commons:commons-lang3:3.12.0")
+}
+
+
+application {
+    applicationDefaultJvmArgs = listOf("--add-exports", "jogl.all/com.jogamp.opengl.util=ALL-UNNAMED",
+        "--add-modules", "jogl.all"
+        )
+}
+
+tasks.withType<JavaExec>() {
+    jvmArgs(listOf("--add-exports", "jogl.all/com.jogamp.opengl.util=ALL-UNNAMED",
+        "--add-modules", "jogl.all"))
 }
 
 tasks.test {
